--- a/Assignment4/Assignment4-Q1c-Form.html
+++ b/Assignment4/Assignment4-Q1c-Form.html
@@ -64,7 +64,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <input type="checkbox">Notify me teh status via Email
+                        <input type="checkbox">Notify me the status via Email
                     </td>
                 </tr>
                 <tr>
