--- a/Assignment5/Assignment5-Q2-DropCap.html
+++ b/Assignment5/Assignment5-Q2-DropCap.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Rajesh Kumar, 22, MCA-B</title>
+    <title>Rajesh Kumar, 22, MCA-1st-B</title>
     <link href="Assignment5-Q2-ExCssFile.css" rel="stylesheet">
 </head>
 <body>
