--- a/JavaScript/Q5-Advertisement.html
+++ b/JavaScript/Q5-Advertisement.html
@@ -13,6 +13,6 @@ a{
 </style>
 <body>
     <h1>---Main Page---</h1>
-    <a href="Q5-adScript-ExternalFile.html" class="button">Click Here to see Ad.</a>
+    <a href="Q5-adScript-ExternalFile.html">Click Here to see Ad.</a>
 </body>
 </html>
